Fix style on mobile
So Todos are no more than 100% of the screen

--- a/src/uicomponents/ToDoItemContent/ToDoItemContent.module.css
+++ b/src/uicomponents/ToDoItemContent/ToDoItemContent.module.css
@@ -7,9 +7,12 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: stretch;
-  width: 200px;
+  width: 100%;
   height: 50px;
-  padding: 0 20px;
+}
+
+.attribute:first-child {
+  padding-right: 20px;
 }
 
 .slider {
