--- a/src/uicomponents/ToDoList/ToDoList.module.css
+++ b/src/uicomponents/ToDoList/ToDoList.module.css
@@ -14,4 +14,5 @@
   margin-bottom: 10px;
   width: 100%;
   max-width: 430px;
+  box-sizing: border-box;
 }
